<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_save"
        android:title="@string/menu_export_title"
        android:icon="@drawable/ic_export"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_rotate"
        android:title="@string/menu_rotate_title"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_change_image"
        android:title="@string/menu_change_image_title"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_gallery"
        android:title="@string/menu_setting_title"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_contact_us"
        android:title="@string/menu_contact_us"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_rate"
        android:title="@string/menu_rate"
        app:showAsAction="never"/>
</menu>