<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/main_group">

        <item
            android:id="@+id/menu_add_text"
            android:title="@string/menu_add_text_title"
            android:icon="@drawable/ic_add_text"
            app:showAsAction="always"/>
        <item
            android:id="@+id/menu_add_sticker"
            android:title="@string/menu_add_text_title"
            android:icon="@drawable/ic_sticker"
            app:showAsAction="always"/>
        <item
            android:id="@+id/menu_delete_text"
            android:title="@string/menu_delete_text_title"
            android:icon="@drawable/ic_delete"
            app:showAsAction="always"/>
        <item
            android:id="@+id/menu_share"
            android:title="@string/menu_share_title"
            android:icon="@drawable/ic_share"
            app:showAsAction="always"/>
        <item
            android:id="@+id/menu_more"
            android:title="@string/menu_more_title"
            android:icon="@drawable/ic_more"
            app:showAsAction="always"/>
    </group>

</menu>